# epd-photoframe

./: .gitignore  Cargo.toml  HARDWARE.md  NOTES.md  PLAN.md  POWER.md  README.md  TODO.md  run.sh
.cargo/: config.toml
.githooks/: pre-commit
src/: app.rs  battery.rs  button.rs  buzzer.rs  canvas.rs  config.rs  config_image.rs  config_mode.rs  displayinterface.rs  error_image.rs  gdep073e01.rs  gdey075t7.rs  grayscale.rs  hardware.rs  iter_util.rs  lib.rs  net_resources.rs  normal_mode.rs  panel.rs  panic_mode.rs  portal.rs  qr_image.rs  rtc_persisted.rs  sht40.rs  single_shot_wifi.rs  sleep.rs  spectra6.rs  sy6974b.rs  t133a01.rs  test_mode.rs  text_box.rs  uart.rs  url.rs  url_util.rs
src/config_mode/: form.html  portal.rs
src/panel/: gdep073e01.rs  gdey075t7.rs  grayscale.rs  mod.rs  spectra6.rs  t133a01.rs
src/portal/: saved.html
