[package]
edition      = "2024"
name         = "reterminal_e100x"
rust-version = "1.91"
version      = "0.1.0"

[[bin]]
name = "reterminal_e100x"
path = "./src/bin/main.rs"

[features]
# Select exactly one device. Each device selects its panel driver and pinout.
e1001 = [] # Seeed reTerminal E1001 (7", GDEY075T7 panel, 800x480 4-level grayscale)
e1002 = [] # Seeed reTerminal E1002 (7", GDEP073E01 panel, 800x480)
e1004 = [] # Seeed reTerminal E1004 (13", T133A01 panel, 1200x1600)

[dependencies]
esp-hal = { version = "1.1.0", features = ["esp32s3", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }

embassy-net = { version = "0.9.1", features = ["dhcpv4", "dns", "mdns", "medium-ethernet", "tcp", "udp"], default-features = false }
embedded-io-async = "0.7.0"
esp-alloc = "0.10.0"
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.10.0", features = [] }
embassy-futures = "0.1.2"
embassy-time = "0.5.1"
esp-radio = { version = "0.18.0", features = [
  "esp-alloc",
  "esp32s3",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.13.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

static_cell = "2.1.1"
esp-println = { version = "0.17.0", features = ["esp32s3"] }
esp-backtrace = { version = "0.19.0", features = ["esp32s3", "println", "panic-handler"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-graphics = "0.8.2"
embedded-text = "0.7.3"
minipng = "1.0.0"
esp-storage = { version = "0.9.0", features = ["esp32s3"] }
esp-nvs = { version = "0.4.0", features = ["esp32s3"] }
qrcodegen-no-heap = "1.8.1"
edge-dhcp = { version = "0.7.0", default-features = false, features = ["io"] }
heapless = { version = "0.9", default-features = false }
edge-captive = { version = "0.7.0", default-features = false, features = ["io"] }
edge-http = { version = "0.7.0", default-features = false, features = ["io"] }
embassy-sync = { version = "0.8", default-features = false }
edge-nal = "0.6"
edge-nal-embassy = { version = "0.8.1", default-features = false, features = ["tcp", "udp", "proto-ipv4"] }
fluent-uri = { version = "0.4.1", default-features = false, features = ["alloc"] }
sht4x = { version = "0.2", default-features = false, features = ["embedded-hal-async"] }
fixed = { version = "1.29", default-features = false }

# Pull `esp-nvs` from the upstream PR (lhemala/esp-nvs#24) that bumps
# its `esp-storage` requirement to `0.9.0`. The released 0.4.0 still
# pins `esp-storage = "^0.8.1"`, which conflicts with our `0.9.0`.
# Drop this `[patch]` once the PR is merged and a new esp-nvs release
# ships.
# https://github.com/lhemala/esp-nvs/pull/24
#
# And the edge-* crates: the `embassy-net 0.9 / heapless 0.9` bump is
# on master (PR ivmarkov/edge-net#90, merged) but hasn't been
# released. Without this pin, `edge-nal-embassy 0.8.1` would drag in
# `embassy-net 0.8` (pinned to `heapless 0.8`), conflicting with
# `esp-radio 0.18`'s `heapless 0.9` requirement. Drop once a release
# tagging master ships.
[patch.crates-io]
esp-nvs = { git = "https://github.com/lhemala/esp-nvs", rev = "e371b0502a83336f649c996006941ba05d9b6308" }
edge-nal = { git = "https://github.com/ivmarkov/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0" }
edge-nal-embassy = { git = "https://github.com/ivmarkov/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0" }
edge-http = { git = "https://github.com/ivmarkov/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0" }
edge-dhcp = { git = "https://github.com/ivmarkov/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0" }
edge-captive = { git = "https://github.com/ivmarkov/edge-net", rev = "1f084b41944c35b233cbe17accfbc09a56d5eaf0" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
